# sqlit

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml  settings.template.json
.github/workflows/: release.yml
aur/: .SRCINFO  PKGBUILD
demos/: d1-demo.json
infra/docker/: docker-compose.test.yml
sqlit/: __init__.py  adapters.py  app.py  cli.py  cli_helpers.py  commands.py  config.py  fields.py  idle_scheduler.py  install_strategy.py  mock_settings.py  mocks.py  omarchy.py  screens.py  state_machine.py  theme_manager.py  url_parser.py  widgets.py
sqlit/core/: input_context.py  keymap.py
sqlit/db/: __init__.py  providers.py  schema.py
sqlit/services/: __init__.py  cancellable.py  docker_detector.py  query.py  session.py
sqlit/sql_completion/: __init__.py  alter_table.py  completion.py  core.py  create_index.py  delete.py  truncate.py  update.py
sqlit/stores/: __init__.py  history.py  starred.py
sqlit/ui/: protocols.py  tree_nodes.py
tests/: .env.example  conftest.py  helpers.py  test_adapter_system_databases.py  test_autocomplete_database_modes.py  test_bigquery.py  test_commands.py  test_credentials_global.py  test_credentials_service.py  test_cross_database_queries.py  test_database_base.py  test_db2.py  test_docker_detector.py  test_install_strategy.py  test_installer_cancel.py  test_mocks.py  test_oracle.py  test_oracle_legacy.py  test_password_prompts.py  test_presto.py  test_schema_capabilities.py  test_trino.py  test_turso.py  test_validation.py
tests/athena/: test_athena.py
tests/fixtures/: bigquery.py  d1.py  db2.py  oracle_legacy.py  presto.py  trino.py
tests/integration/: browsing_base.py  test_database_browsing_flow.py  test_mssql_datetimeoffset.py  test_snowflake_fakesnow.py  test_stale_connection_reconnect.py  test_telescope_watchdog.py  test_tls_cli_config.py  test_transactions.py
tests/performance/: __init__.py  test_large_dataset_rendering.py
tests/ui/: conftest.py  mocks.py  (+7 more)
(+336 files in other folders)
