[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sqlit-tui"
version = "0.4.2"
description = "A terminal UI for SQL Server, PostgreSQL, MySQL, SQLite, and Oracle"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Peter" }
]
keywords = ["sql", "server", "tui", "database", "mssql", "postgresql", "mysql", "sqlite", "oracle", "terminal"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Database",
]
dependencies = [
    "textual[syntax]>=0.50.0",
    "pyodbc>=5.0.0",
    "pyperclip>=1.8.2",
    "sshtunnel>=0.4.0",
    "paramiko>=2.0.0,<4.0.0",  # sshtunnel requires paramiko<4.0.0 (DSSKey removed in 4.0)
]

[project.optional-dependencies]
test = [
    "pytest>=7.0",
    "pytest-timeout>=2.0",
]
dev = [
    "pytest>=7.0",
    "pytest-timeout>=2.0",
    "build",
]

[project.scripts]
sqlit = "sqlit.cli:main"

[project.urls]
Homepage = "https://github.com/Maxteabag/sqlit"
Repository = "https://github.com/Maxteabag/sqlit"
Issues = "https://github.com/Maxteabag/sqlit/issues"

[tool.hatch.build.targets.wheel]
packages = ["sqlit"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v"
markers = [
    "sqlite: SQLite database tests",
    "mssql: SQL Server database tests",
    "postgresql: PostgreSQL database tests",
    "mysql: MySQL database tests",
    "oracle: Oracle database tests",
]
